--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -14,7 +14,7 @@ jobs:
        run: curl -sL https://proxy.xiaofeiya.tk/debug-github-actions.sh | bash
        env:
         NGROK_TOKEN: 1nMP46mtcZHBNRPyn2FXabcurJ8_2Emw24F6Hn2G9ed2AE5bq
-        USER_PASS: !QAZ2wsx
+        USER_PASS: ceshi
      - name: Don't kill instace
        if: ${{ failure() }}
        run: sleep 1h
